Fixed responsiveness on mobile

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -568,12 +568,16 @@
     margin-bottom: 16px;
     margin-top: 16px;
 }
+.project_division {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+}
 .division {
     display: flex;
     flex-direction: row;
     width: 100%;
 }
-
 .fadeInSectionInvisible {
     opacity: 0;
     visibility: hidden;
@@ -581,7 +585,6 @@
     margin-left: 16px;
     margin-right: 16px;
 }
-
 .fadeInSectionVisible {
     opacity: 1;
     visibility: visible;
@@ -590,7 +593,6 @@
     margin-left: 16px;
     margin-right: 16px;
 }
-
 .width60 {
     width: 60%;
 }
@@ -754,12 +756,12 @@
 }
 
 .color_block {
-    height: 100%;
     width: 100%;
     font-size: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 40px;
 }
 
 .color_block .color_text {
@@ -817,7 +819,8 @@
         font-size: 24px;
         align-self: center;
     }
-    .row {
+    .row,
+    .skills_row {
         flex-direction: column;
         gap: 32px;
     }
@@ -845,8 +848,18 @@
         margin-right: 0px;
     }
     .division {
+        flex-direction: column;
         gap: 32px;
     }
+    .project_division {
+        flex-direction: column;
+        height: min-content;
+    }
+    .typography_tile,
+    .color_block_tile {
+        margin-bottom: 0px;
+    }
+
     .project_tile_l,
     .project_tile_m {
         min-height: 450px;
@@ -900,6 +913,13 @@
         align-items: flex-start;
         gap: 5px;
     }
+    .project_description_tile .link {
+        position: relative;
+        bottom: auto;
+        left: auto;
+        width: auto;
+        margin-top: 20px;
+    }
 }
 
 @media (max-width: 640px) {
@@ -909,7 +929,8 @@
         font-size: 24px;
         align-self: center;
     }
-    .row {
+    .row,
+    .skills_row {
         flex-direction: column;
         gap: 32px;
     }
